Fixed full width stretch on home page.

--- a/style.less
+++ b/style.less
@@ -507,6 +507,7 @@ body.no-sidebar #primary {
 }
 
 /* Full Width Primary blocks */
+body.siteorigin-panels-lite-home #primary,
 body.vantage-layout-width-full-width #primary,
 body.vantage-layout-width-full-width-stretched #primary {
 	width: auto;
